--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,6 +1,9 @@
 [phases.setup]
 nixPkgs = ["go"]
 
+[phases.install]
+cmds = ["go mod download"]
+
 [phases.build]
 cmds = ["go build -o bin/server ./cmd"]
 
