Add Dockerfile and Railway config for deployment

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,15 +3,15 @@ FROM golang:1.25-alpine AS builder
 
 WORKDIR /app
 
-# Copy go mod files
-COPY backend/go.mod backend/go.sum ./
+# Copy go mod files first for better caching
+COPY go.mod go.sum ./
 RUN go mod download
 
 # Copy source code
-COPY backend/ ./
+COPY . .
 
 # Build the application
-RUN go build -o bin/server ./cmd
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o bin/server ./cmd
 
 # Runtime stage
 FROM alpine:latest
@@ -23,7 +23,7 @@ WORKDIR /root/
 # Copy the binary from builder
 COPY --from=builder /app/bin/server .
 
-# Expose port
+# Expose port (Railway will set PORT env var automatically)
 EXPOSE 8080
 
 # Run the binary
